force-app/main/default/objects/Payment_Line__c/Payment_Line__c.object-meta.xml
<CustomObject>
    <label>Payment Plan Line Item</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plan Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>