force-app/main/default/objects/Payment_Line__c/fields/Install__c.field-meta.xml
<CustomField>
    <fullName>Install__c</fullName>
    <formula>Unit__r.os_Sales_Price__c  * Percentage__c /100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>