force-app/main/default/objects/Payment_Line__c/fields/Outstand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstand_Amount__c</fullName>
    <formula>Install__c - Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstand Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>