force-app/main/default/objects/Payment_Line__c/fields/Paid_date__c.field-meta.xml
<CustomField>
    <fullName>Paid_date__c</fullName>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>