force-app/main/default/objects/Payment_Line__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Payment Plan Line Items</relationshipLabel>
    <relationshipName>Payment_Plan_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>