force-app/main/default/objects/Payment_Line__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Number</label>
    <referenceTo>OS_Property__c</referenceTo>
    <relationshipLabel>Payment Plan Line Items</relationshipLabel>
    <relationshipName>Payment_Plan_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>