force-app/main/default/objects/Payment_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Plan__c</columns>
    <columns>Order__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>